force-app/main/default/objects/OIP_DependencyEdge__c/OIP_DependencyEdge__c.object-meta.xml
<CustomObject>
    <fullName>OIP_DependencyEdge__c</fullName>
    <label>Dependency Edge</label>
    <pluralLabel>Dependency Edges</pluralLabel>
    <nameField>
        <displayFormat>EDGE-{0000}</displayFormat>
        <label>Dependency Edge Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>