force-app/main/default/objects/OIP_DependencyEdge__c/fields/OIP_Description__c.field-meta.xml
<CustomField>
    <fullName>OIP_Description__c</fullName>
    <label>Description</label>
    <length>500</length>
    <type>Text</type>
</CustomField>