force-app/main/default/objects/OIP_DependencyEdge__c/fields/OIP_EdgeType__c.field-meta.xml
<CustomField>
    <fullName>OIP_EdgeType__c</fullName>
    <label>Edge Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>References</fullName>
            </value>
            <value>
                <fullName>Invokes</fullName>
            </value>
            <value>
                <fullName>Extends</fullName>
            </value>
            <value>
                <fullName>Implements</fullName>
            </value>
            <value>
                <fullName>Overrides</fullName>
            </value>
            <value>
                <fullName>Calls</fullName>
            </value>
            <value>
                <fullName>TriggersOn</fullName>
            </value>
            <value>
                <fullName>ReadsField</fullName>
            </value>
            <value>
                <fullName>WritesField</fullName>
            </value>
            <value>
                <fullName>DeploymentRequires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>