force-app/main/default/objects/OIP_DependencyEdge__c/fields/OIP_IsPotentialConflict__c.field-meta.xml
<CustomField>
    <fullName>OIP_IsPotentialConflict__c</fullName>
    <label>Is Potential Conflict</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>