force-app/main/default/objects/OIP_DependencyEdge__c/fields/OIP_SourceNodeId__c.field-meta.xml
<CustomField>
    <fullName>OIP_SourceNodeId__c</fullName>
    <label>Source Node</label>
    <referenceTo>OIP_DependencyNode__c</referenceTo>
    <relationshipLabel>Source Edges</relationshipLabel>
    <relationshipName>SourceEdges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>