force-app/main/default/objects/OIP_DependencyEdge__c/fields/OIP_Strength__c.field-meta.xml
<CustomField>
    <fullName>OIP_Strength__c</fullName>
    <label>Strength</label>
    <required>true</required>
    <type>Picklist</type>
    <picklist>
        <picklistValues>
            <fullName>Strong</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Weak</fullName>
        </picklistValues>
    </picklist>
</CustomField>