force-app/main/default/objects/OIP_DependencyEdge__c/fields/OIP_TargetNodeId__c.field-meta.xml
<CustomField>
    <fullName>OIP_TargetNodeId__c</fullName>
    <label>Target Node</label>
    <referenceTo>OIP_DependencyNode__c</referenceTo>
    <relationshipLabel>Target Edges</relationshipLabel>
    <relationshipName>TargetEdges</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>